fixed issues on desktop and mobile web fixed layout issue on iOS

--- a/server/projects/kikbak/WebContent/css/style.css
+++ b/server/projects/kikbak/WebContent/css/style.css
@@ -419,7 +419,6 @@ strong{
 .grd-btn {
     background: url('../img/btn_blue.png');
     background-size: 100% 100%;
-    margin-left: 8px;
 }
 input[disabled="disabled"] {
     opacity:.2;
