--- a/server/projects/webclient/css/kikbak.css
+++ b/server/projects/webclient/css/kikbak.css
@@ -508,7 +508,7 @@ p.msg {
     margin: 1% 0;
 }
 .gv h2 {
-    color: #247de9;
+    color: #ED1C24;
     font-size: 25px;
     margin-top: 2%;
     text-align: center
